Finished About page Html

--- a/about.html
+++ b/about.html
@@ -51,8 +51,9 @@
 
         <div class="content">
             <h3>What is our objective?</h3>
-            <p>Our goal is to increase student's understanding of the English Language to ensure that students will be on track while having fun when they study English! Our lessons will first start off by providing students with the basics of English. After they are able to grasp the basics, they can proceed on to the intermediate as well as the advanced lessons.</p>
-            
+            <p>Our goal is to increase student's understanding of the English Language to ensure that students will be on track while having fun when they study English! Our lessons will first start off by providing students with the basics of English. After they are able to grasp the basics, they can proceed on to the intermediate as well as the advanced lessons. There are also quizzes to test the knowledge of the students!</p>
             
         </div>
+        </section>
+        <!--This is the end of the about section-->
 </body>
