made some changes to the quiz website

--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome English Quiz App | Yat Soon</title>
+    <title>Awesome English Quiz | Yat Soon</title>
     <link rel="stylesheet" href="quiz.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
@@ -62,11 +62,11 @@
         </div>
         <div class="complete_text">You've completed the Quiz well done!</div>
         <div class="score_text">
-            <!-- Here I've inserted Score Result from JavaScript -->
+            <!-- Score from JavaScript -->
         </div>
         <div class="buttons">
-            <button class="restart">Would you like to try again?</button>
-            <button class="quit">Exit Quiz</button>
+            <button class="restart">try again?</button>
+            <button class="quit">Exit</button>
         </div>
     </div>
 
