made some more minor changes to the quiz

--- a/quiz.html
+++ b/quiz.html
@@ -38,7 +38,7 @@
             <div class="time_line"></div>
         </header>
         <section>
-            <div class="que_text">
+            <div class="text">
                 <!-- questions from the JavaScript -->
             </div>
             <div class="option_list">
