Done With Home page HTML

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             </li>
             <li><a href = "#"> Pages +</a>
             <ul>
-                <li><a href= "blog.html">Contact us</a></li>
+                <li><a href= "blog.html">Blogging your questions</a></li>
                 <li><a href= "quiz.html"> Quiz!</a></li>
             </ul>
         </li>
