Added css for lesson1 html (not finished)

--- a/lesson-1.html
+++ b/lesson-1.html
@@ -12,14 +12,42 @@
 </head>
 
 <body>
-	<h1>Welcome to the vocabulary class</h1>
-    <p>Here you will learn more about vocabulary</p>
-    <p>What is vocabulary?</p>
-    <p>Well vocabulary is the body of words used in a language</p>
+  <div class="Intro">
+	<h1 style="text-align: center;">Welcome to the vocabulary class</h1>
+    <p>Welcome to your online english class. In this class you will learn more about vocabulary.</p>
+    <p>What is vocabulary? Well vocabulary is the body of words used in a language.</p>
+    <p>Why is vocabulary important? Vocabulary plays a very important role in reading.</p>
     <p>The best way to improve on our vocabulary is by reading, using a dictionary or practicing new words while talking.</p>
-    <p>Here are a list of short stories that you may read in order to learn more vocabulary</p>
-    <div class="slideshow-container">
+    <h2>Here are some of the vocabulary topics</h2>
+    <h3>Vocabulary Topics</h3>
+    <ul>
+      <li>food and sports</li>
+      <li>music and movies</li>
+      <li>numbers and time</li>
+      <li>holidays and festivals</li>
+    </ul>
+    <h2>Here are vocabulary by class and form</h2>
+    <h3>Parts of Speech</h3>
+    <ul>
+      <li>Verbs</li>
+      <li>Nouns</li>
+      <li>Adjectives</li>
+      <li>Adverbs</li>
+      <li>Prepositions</li>
+      <li>Interjections</li>
+    </ul>
+    <h3>Word Forms</h3>
+    <ul>
+      <li>Prefixes</li>
+      <li>Suffixes</li>
+      <li>Contractions</li>
+      <li>more...</li>
+    </ul>
 
+    <p>Here are a list of short paragraphs that you may read in order to learn more words to improve your vocabulary.</p>
+    </div>
+
+    <div class="slideshow-container">
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
         <div class="numbertext">1 / 7</div>
