started on the lesson2 page

--- a/lesson-1.html
+++ b/lesson-1.html
@@ -22,7 +22,7 @@
       <br>
       <br>
       <br>
-    <p>Welcome to your online english class. In this class you will learn more about vocabulary.</p>
+    <p>Welcome to your online english vocabulary class. In this class you will learn more about vocabulary.</p>
     <p>What is vocabulary? Well vocabulary is the body of words used in a language.</p>
     <p>Why is vocabulary important? Vocabulary plays a very important role in reading.</p>
     <p>The best way to improve on our vocabulary is by reading, using a dictionary or practicing new words while talking.</p>
