--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Assignment 2</title>
-    <link rel="Stylesheet" href="css/style.css">
+    <link rel="Stylesheet" href="style.css">
+
 
 </head>
 
@@ -23,7 +24,6 @@
                 <ul>
                     <li><a href="lesson-1.html">Lesson 01</a></li></li>
                     <li><a href="lesson-2.html">Lesson 02</a></li></li>
-                    <li><a href="lesson-3.html">Lesson 03</a></li>
                 </ul>
             </li>
             <li><a href = "#"> Pages +</a>
@@ -46,7 +46,7 @@
     <!--Start of about section-->
     <section class="about">
         <div class="image">
-            <img scr="images/logo-photo.png" alt="">
+            <img src="images/aboutus.jpg" alt="">
             </div>
 
         <div class="content">
@@ -56,4 +56,4 @@
         </div>
         </section>
         <!--This is the end of the about section-->
-</body>
+        
