Editing home html and adding new image

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Assignment 2</title>
-    <link rel="Stylesheet" href="css/style.css">
+    <link rel="Stylesheet" href="style.css">
 
 </head>
 
@@ -23,7 +23,6 @@
                 <ul>
                     <li><a href="lesson-1.html">Lesson 01</a></li></li>
                     <li><a href="lesson-2.html">Lesson 02</a></li></li>
-                    <li><a href="lesson-3.html">Lesson 03</a></li>
                 </ul>
             </li>
             <li><a href = "#"> Pages +</a>
@@ -91,15 +90,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
 <!-- footer section starts  -->
 
 <section class="footer">
@@ -112,7 +102,6 @@
             <a href="about.html"> <i class="fas fa-arrow-right"></i> About </a>
             <a href="lesson-1.html"> <i class="fas fa-arrow-right"></i> lesson-1 </a>
             <a href="lesson-2.html"> <i class="fas fa-arrow-right"></i>lesson-2 </a>
-            <a href="lesson-3.html"> <i class="fas fa-arrow-right"></i> lesson-3 </a>
             <a href="quiz.html"> <i class="fas fa-arrow-right"></i> Quiz </a>
             <a href="blog.html"> <i class="fas fa-arrow-right"></i> Blogging </a>
             <a href="contact.html"> <i class="fas fa-arrow-right"></i> Contact </a>
@@ -135,7 +124,7 @@
             <a href="#"> <i class="fas fa-arrow-right"></i> Website Feedback </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> User Support </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> certificates </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> newsletter </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Announcement </a>
         </div>
 
         <div class="box">
@@ -150,7 +139,7 @@
 
     </div>
 
-    <div class="credit"> created by <span>Aspire Education</span> | all rights reserved! </div>
+    <div class="credit"> created by <span>Aspire Education</span> | All Rights reserved! </div>
 
 </section>
 
