Finishing css for both lesson1 and 2 webpages

--- a/lesson-2.html
+++ b/lesson-2.html
@@ -8,44 +8,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-	<link href="lesson-1.css" rel="stylesheet" type="text/css" />
+	<link href="lesson-2.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <div class="heading"><h1>Welcome to the Grammar class</h1></div>
-  <div class="Intro">
     <!--nav bar -->
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     <div class="intropara">
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
     <p>Welcome to your online english grammar class. In this class you will learn more about grammar and how you can improve on your grammar.</p>
     <p>What is grammar? Well grammar is the structure of languages.</p>
     <p>Why is grammar important? It's what allows us to put sentences together in order to be able to talk to one another.</p>
-    <h2>Here are a few tips on how you can improve on your grammar</h2>
-    <ul>
-        <li>Read</li>
-        <li>Writing</li>
-        <li>Re-Reading aloud</li>
-        <li>Ask for feedback</li>
-    </ul>
-    <p>Reading. Reading allows you to come across the different grammar rules, which then allows you to know what is gramatically correct and wrong. Which will make you use the proper grammar rules when you are writing. Fun fact: Reading alot will help you know what grammar rules are effective and which common grammar mistakes to avoid. </p>
-    <p>Writing. The more time you spend writing, the more chances you get to practice your grammar. Which allows you to improve</p>
-    <p>Re-Reading aloud. Re-Reading aloud allows you to catch any mistakes or errors made.</p>
-    <p>Ask for feedback. Asking for feedback is the best way to improve. Sometimes we may not know our mistakes and need others to correct us in order to learn.</p>
-
-    <hr>
+    </div>
     <br>
+    <div class="container">
+    <div class="flex-item">
+    <h2>Here are a few tips on how you can improve on your grammar</h2>
+    <h3>Reading:</h3>
+    <p> Reading allows you to come across the different grammar rules, which then allows you to know what is gramatically correct and wrong. Which will make you use the proper grammar rules when you are writing. Fun fact: Reading alot will help you know what grammar rules are effective and which common grammar mistakes to avoid. </p>
+    <h3>Writing:</h3>
+    <p>The more time you spend writing, the more chances you get to practice your grammar. Which allows you to improve and make less mistakes.</p>
+    <h3>Re-reading Aloud:</h3>
+    <p>Re-Reading aloud allows you to catch any mistakes or errors made.</p>
+    <h3>Feedback:</h3>
+    <p>Ask for feedback. Asking for feedback is the best way to improve. Sometimes we may not know our mistakes and need others to correct us in order to learn.</p>
+    </div>
+    </div>
+    <br>
+
+    <div class="container2">
+    <div class="flex-item2">
     <h2>Here are some grammar rules to remember</h2>
     <ul>
-        <li>Rule 1. A complete sentence must have a noun (a thing, person, place or an idea) and verb (an action or what the person is feeling)</li>
-        <li>Rule 2. A complete sentence must include a subject (person or thing doing something) and a predicate (part of the sentence that contains an action)</li>
-        <li>Rule 3. Only way to avoid rules 1 and 2 is an imperative sentece (tells someone to do something, gives advice or instruction or a request or command, usually no obvious subject).</li>
-        <li>Rule 4. Adjectives (a word that describes a noun) can go before the noun (a thing, person, place or an idea) they describe, or after it, if seperated by a verb (an action or what the person is feeling).</li>
+        <li>Rule 1: A complete sentence must have a noun (a thing, person, place or an idea) and verb (an action or what the person is feeling)</li>
+        <br>
+        <li>Rule 2: A complete sentence must include a subject (person or thing doing something) and a predicate (part of the sentence that contains an action)</li>
+        <br>
+        <li>Rule 3: Only way to avoid rules 1 and 2 is an imperative sentece (tells someone to do something, gives advice or instruction or a request or command, usually no obvious subject).</li>
+        <br>
+        <li>Rule 4: Adjectives (a word that describes a noun) can go before the noun (a thing, person, place or an idea) they describe, or after it, if seperated by a verb (an action or what the person is feeling).</li>
+        <br>
     </ul>
+    </div>
+    <hr>
+    <div class="flex-item2">
+    <h2>Grammar rules examples</h2>
+    <hr>
+    <ul>
+      <li>Rule 1: The bird flew</li>
+      <br>
+      <li>Rule 2: The angry bird flew quickly across the sky</li>
+      <br>
+      <li>Rule 3: Go away!</li>
+      <br>
+      <li>Rule 4: The bird flew. or The bird is angry</li>
+    </ul>
+    </div>
+    </div>
     
 
 
