--- a/lesson-1.html
+++ b/lesson-1.html
@@ -27,8 +27,11 @@
     <p>Why is vocabulary important? Vocabulary plays a very important role in reading.</p>
     <p>The best way to improve on our vocabulary is by reading, using a dictionary or practicing new words while talking.</p>
     </div>
+    <hr>
     <h2>Here are some of the vocabulary topics:</h2>
     <hr>
+    <div class="container">
+    <div class="flex-item">
     <h3>Vocabulary Topics</h3>
     <ul>
       <li>food and sports</li>
@@ -37,8 +40,14 @@
       <li>holidays and festivals</li>
     </ul>
     <hr>
+    </div>
+    </div>
+
+    <hr>
     <h2>Here are vocabulary by class and form:</h2>
     <hr>
+    <div class="container2"> 
+    <div class="flex-item2">
     <h3>Parts of Speech</h3>
     <ul>
       <li>Verbs</li>
@@ -48,7 +57,8 @@
       <li>Prepositions</li>
       <li>Interjections</li>
     </ul>
-    <hr>
+    </div>
+    <div class="flex-item2">
     <h3>Word Forms</h3>
     <ul>
       <li>Prefixes</li>
@@ -56,7 +66,10 @@
       <li>Contractions</li>
       <li>more...</li>
     </ul>
-    <hr>
+    </div>
+    </div>
+
+
     <br>
     <p style="text-align: center;">Here are a list of short paragraphs that you may read in order to learn more words to improve your vocabulary.</p>
     <p style="text-align: center;">Also a english dictionary wizard for you to use!</p>
