Almost finished both lesson pages left nav bar & footer

--- a/lesson-1.html
+++ b/lesson-1.html
@@ -22,17 +22,14 @@
       <br>
       <br>
       <br>
-    <p>Welcome to your online english vocabulary class. In this class you will learn more about vocabulary.</p>
+    <p>Welcome to your online english vocabulary class. In this class you will learn more about vocabulary. </p>
     <p>What is vocabulary? Well vocabulary is the body of words used in a language.</p>
     <p>Why is vocabulary important? Vocabulary plays a very important role in reading.</p>
     <p>The best way to improve on our vocabulary is by reading, using a dictionary or practicing new words while talking.</p>
     </div>
-    <hr>
-    <h2>Here are some of the vocabulary topics:</h2>
-    <hr>
     <div class="container">
     <div class="flex-item">
-    <h3>Vocabulary Topics</h3>
+    <h1>Here are some of the vocabulary topics:</h1>
     <ul>
       <li>food and sports</li>
       <li>music and movies</li>
@@ -42,13 +39,9 @@
     <hr>
     </div>
     </div>
-
-    <hr>
-    <h2>Here are vocabulary by class and form:</h2>
-    <hr>
     <div class="container2"> 
     <div class="flex-item2">
-    <h3>Parts of Speech</h3>
+    <h1>Vocabulary classes:</h1>
     <ul>
       <li>Verbs</li>
       <li>Nouns</li>
@@ -59,7 +52,7 @@
     </ul>
     </div>
     <div class="flex-item2">
-    <h3>Word Forms</h3>
+    <h1>Vocabulary forms:</h1>
     <ul>
       <li>Prefixes</li>
       <li>Suffixes</li>
