--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 <body>
 	<div class="container">
-		<h1>Simple Contact Form System</h1>
+		<h1>Aspire Education contact us page</h1>
 		<div id="add-update-msg">
 			<div class="alert alert-success" role="alert">
 				Contact record successfully added
