Made changes to about page

--- a/about.html
+++ b/about.html
@@ -26,9 +26,8 @@
                     <li><a href="lesson-2.html">Lesson 02</a></li></li>
                 </ul>
             </li>
-            <li><a href = "#"> Pages +</a>
+            <li><a href = "#"> Pages</a>
             <ul>
-                <li><a href= "blog.html">Blogging your questions</a></li>
                 <li><a href= "quiz.html"> Quiz!</a></li>
             </ul>
         </li>
